--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <section class="hero-bg-container">
         <div class="hero-bg-inner-container center-container">
             <div class="grid grid-4-cols grid-4-cols--hero">
-              <button class="btn btn-hero"><img src="img/categories.svg" class="category-icon"><span>Categories</span></button>
+              <button class="btn-hero"><img src="img/categories.svg" class="category-icon"><span>Categories</span></button>
               <form class="needs-validation hero-form-container">
                   <input type="text" class="hero-form  form-control" id="validationCustom03" placeholder="search">
                   <img src="img/hero-search-icon.svg" alt="" class="hero-search-icon">
@@ -256,6 +256,128 @@
          </div>
     </section>
      <!-- Top Featured products products End -->
+      <!-- Netflix paxckage start -->
+        <section class="netflix-packages-section-container">
+          <h2>Netflix Packages</h2>
+          <div class="netflix-packages-section-container__card-container center-container grid">
+              <div class="netflix-packages-section-container__card-container__item ">
+                  <img src="img/netflix-movies-img.svg" alt="">
+                  <div class="netflix-packages-section-container__card-container__item__content">
+                    <img src="img/neflix-logo-red.svg" alt="">
+                    <p>Netflix Subcriptions</p>
+                    <span>200 $</span> 
+                    <button class="btn">Shop Now</button>
+                  </div>
+              </div>
+
+              <div class="netflix-packages-section-container__card-container__item ">
+                <img src="img/netflix-movies-img.svg" alt="">
+                <div class="netflix-packages-section-container__card-container__item__content">
+                  <img src="img/neflix-logo-red.svg" alt="">
+                  <p>Netflix Subcriptions</p>
+                  <span>200 $</span> 
+                  <button class="btn">Shop Now</button>
+                </div>
+            </div>
+
+              
+          </div>
+        </section>
+
+        <!-- Active promotion start -->
+         <section class="active-promotions-section-container">    
+           <div class="center-container">
+                <h2>Active Promotions</h2>
+                <div class="active-promotions-section-container__gallery-container">
+                  <figure><img src="img/book-pen.jpg" alt=""></figure>
+                  <figure class="active-promotions-section-container__gallery-container__middle-image">
+                    <div><img src="img/globe.svg" alt=""></div>
+                    <p class="mb-5 text-center ">Lorem ipsum dolor sit amet consectetur. Orci laoreet amet faucibus felis at. Neque feugiat nisl felis volutpat. Est.</p>
+                    <button class="btn btn--secondary">Browse Product</button>
+                  </figure>
+                  <figure><img src="img/tablet.jpg" alt=""></figure>
+                  <div class="globe">
+                    <img src="img/globe.svg" alt="">
+                    <p class="mb-5 text-center">Lorem ipsum dolor sit amet consectetur. Orci laoreet amet faucibus felis at. Neque feugiat nisl felis volutpat. Est.</p>
+                    <button class="btn btn--secondary">Browse Product</button>
+                  </div>
+                  <div class="globe globe--2">
+                    <img src="img/globe.svg" alt="">
+                    <p class="mb-5 text-center">Lorem ipsum dolor sit amet consectetur. Orci laoreet amet faucibus felis at. Neque feugiat nisl felis volutpat. Est.</p>
+                    <button class="btn btn--secondary">Browse Product</button>
+                  </div>
+                </div>
+          </div>
+ 
+        </section>
+        <!-- Active promotion end -->
+           <!-- Email subcribe section start-->
+           <section class="email-subcribe-section-container ">    
+              <div class="email-subcribe-section-container__inner container-center">
+                  <div class="email-subcribe-section-container__inner--left">
+                     <h2>Subcribe Us</h2>
+                     <p>Stay up to date with our latest news.</p>
+                  </div>
+                  <div class="email-subcribe-section-container__inner--right">
+                    <form action="">
+                      <label for="Email">Email</label>
+                      <input id="Email" type="text" placeholder="Email here">
+                    </form>
+                    <button class="btn btn--secondary btn--secondary--email">Submit</button>
+                 </div>
+              </div>
+          </section>
+           <!-- Email subcribe section end-->
+           <footer class="footer-section-container">
+             <div class="footer-section-container_inner center-container">
+              <div class="footer-section-container_inner__container">
+                <div>LOGO</div>
+                <p >
+                  Lorem ipsum dolor sit amet consectetur. Elementum ut in et risus ut scelerisque augue leo. Aliquam nunc sed egestas tellus aliquam. Pretium senectus lorem lorem elit. Nibh netus.
+                </p>
+              </div>
+             
+              <div class="footer-section-container_inner__container">
+                <p class="footer-link-heading">
+                  About Us
+                </p>
+                <ul class="link-list-item">
+                  <li><a href="">About Us</a></li>
+                  <li><a href="">Contact Us</a></li>
+                </ul>
+              </div>
+              <div class="footer-section-container_inner__container">
+                <p class="footer-link-heading padding-bottom--md">
+                  Legal
+                </p>
+                <ul class="link-list-item">
+                  <li><a href="">Corporate Info</a></li>
+                  <li><a href="">Privacy infor</a></li>
+                  <li><a href="">Information Security Policy</a></li>
+                  <li><a href="">Website Term of Use</a></li>
+                </ul>
+              </div>
+              <div class="footer-section-container_inner__container">
+                <p class="footer-link-heading">
+                  Useful Links
+                </p>
+                <ul class="link-list-item">
+                  <li><a href="">FAQ</a></li>
+                  <li><a href="">Lorem</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                </ul>
+              </div>
+             </div>
+             <div class="footer-section-container__footer-links center center-container">
+              <ul class="link-list-item">
+                <li><a href=""><img src="img/facebook.svg" alt=""></a></li>
+                <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
+                <li><a href=""><img src="img/goggle.svg" alt=""></a></li>
+                <li><a href=""><img src="img/lin.svg" alt=""></a></li>
+              </ul>
+            </div>
+           </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
