--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         </section>
         <!-- Active promotion end -->
            <!-- Email subcribe section start-->
-           <section class="email-subcribe-section-container ">    
-              <div class="email-subcribe-section-container__inner container-center">
+           <section class="email-subcribe-section-container">    
+              <div class="email-subcribe-section-container__inner">
                   <div class="email-subcribe-section-container__inner--left">
                      <h2>Subcribe Us</h2>
                      <p>Stay up to date with our latest news.</p>
@@ -328,8 +328,8 @@
               </div>
           </section>
            <!-- Email subcribe section end-->
-           <footer class="footer-section-container">
-             <div class="footer-section-container_inner center-container">
+           <footer class="footer-section-container center-container">
+             <div class="footer-section-container_inner">
               <div class="footer-section-container_inner__container">
                 <div>LOGO</div>
                 <p >
@@ -338,7 +338,7 @@
               </div>
              
               <div class="footer-section-container_inner__container">
-                <p class="footer-link-heading">
+                <p class="footer-link-heading padding-bottom--md">
                   About Us
                 </p>
                 <ul class="link-list-item">
@@ -369,7 +369,7 @@
                 </ul>
               </div>
              </div>
-             <div class="footer-section-container__footer-links center center-container">
+             <div class="footer-section-container__footer-links">
               <ul class="link-list-item">
                 <li><a href=""><img src="img/facebook.svg" alt=""></a></li>
                 <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
