--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
      </section>
      <!-- Best Selling products End -->
      <!-- Top Featured products products Start -->
-     <section class="display Best-selling-product-bg-container Best-selling-product-bg-container--top-product center-container">
+     <section class="Best-selling-product-bg-container Best-selling-product-bg-container--top-product center-container">
       <div class="Best-selling-product-bg-container__inner  pt-5">
        <h2>Top Featured<span>Products</span></h2>
  
@@ -286,26 +286,26 @@
     </section>
      <!-- Top Featured products products End -->
       <!-- Netflix paxckage start -->
-        <section class="display netflix-packages-section-container">
+        <section class="netflix-packages-section-container">
           <h2>Netflix Packages</h2>
-          <div class="netflix-packages-section-container__card-container center-container grid">
+          <div class="netflix-packages-section-container__card-container center-container">
               <div class="netflix-packages-section-container__card-container__item ">
-                  <img src="img/netflix-movies-img.svg" alt="">
+                  <img src="img/netflix-movies-img.svg" alt="" class="image-fluid">
                   <div class="netflix-packages-section-container__card-container__item__content">
-                    <img src="img/neflix-logo-red.svg" alt="">
+                    <img src="img/neflix-logo-red.svg"  class="image-fluid" alt="">
                     <p>Netflix Subcriptions</p>
                     <span>200 $</span> 
-                    <button class="btn">Shop Now</button>
+                    <button class="btn btn--netflix">Shop Now</button>
                   </div>
               </div>
 
               <div class="netflix-packages-section-container__card-container__item ">
-                <img src="img/netflix-movies-img.svg" alt="">
+                <img src="img/netflix-movies-img.svg" alt="" class="image-fluid">
                 <div class="netflix-packages-section-container__card-container__item__content">
-                  <img src="img/neflix-logo-red.svg" alt="">
+                  <img src="img/neflix-logo-red.svg" alt=""  class="image-fluid">
                   <p>Netflix Subcriptions</p>
                   <span>200 $</span> 
-                  <button class="btn">Shop Now</button>
+                  <button class="btn btn--netflix">Shop Now</button>
                 </div>
             </div>
 
@@ -408,8 +408,8 @@
             </div>
            </footer>
            
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
+<!-- <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script> -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 </body>
 </html>
