--- a/index.html
+++ b/index.html
@@ -314,8 +314,7 @@
         </section>
 
         <!-- Active promotion start -->
-         <section class="display active-promotions-section-container">    
-           <div class="center-container">
+         <section class="active-promotions-section-container center-container">    
                 <h2>Active Promotions</h2>
                 <div class="active-promotions-section-container__gallery-container">
                   <figure><img src="img/book-pen.jpg" alt=""></figure>
@@ -336,8 +335,6 @@
                     <button class="btn btn--secondary">Browse Product</button>
                   </div>
                 </div>
-          </div>
- 
         </section>
         <!-- Active promotion end -->
            <!-- Email subcribe section start-->
