--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/style.scss">
 </head>
 <body>
     <!-- nav start --> 
@@ -338,7 +338,7 @@
         </section>
         <!-- Active promotion end -->
            <!-- Email subcribe section start-->
-           <section class="display email-subcribe-section-container">    
+           <section class="email-subcribe-section-container center-container">    
               <div class="email-subcribe-section-container__inner">
                   <div class="email-subcribe-section-container__inner--left">
                      <h2>Subcribe Us</h2>
@@ -354,8 +354,8 @@
               </div>
           </section>
            <!-- Email subcribe section end-->
-           <footer class="display footer-section-container center-container">
-             <div class="footer-section-container_inner">
+           <footer class="footer-section-container ">
+             <div class="footer-section-container_inner center-container">
               <div class="footer-section-container_inner__container">
                 <div>LOGO</div>
                 <p >
@@ -395,7 +395,7 @@
                 </ul>
               </div>
              </div>
-             <div class="footer-section-container__footer-links">
+             <div class="display footer-section-container__footer-links center-container">
               <ul class="link-list-item">
                 <li><a href=""><img src="img/facebook.svg" alt=""></a></li>
                 <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
