--- a/index.html
+++ b/index.html
@@ -355,15 +355,15 @@
           </section>
            <!-- Email subcribe section end-->
            <footer class="footer-section-container ">
-             <div class="footer-section-container_inner center-container">
-              <div class="footer-section-container_inner__container">
+             <div class="footer-section-container_inner center-container ">
+              <div class="footer-section-container_inner__container logo">
                 <div>LOGO</div>
                 <p >
                   Lorem ipsum dolor sit amet consectetur. Elementum ut in et risus ut scelerisque augue leo. Aliquam nunc sed egestas tellus aliquam. Pretium senectus lorem lorem elit. Nibh netus.
                 </p>
               </div>
              
-              <div class="footer-section-container_inner__container">
+              <div class="footer-section-container_inner__container ">
                 <p class="footer-link-heading padding-bottom--md">
                   About Us
                 </p>
@@ -394,15 +394,16 @@
                   <li><a href="">Lorem ipsum</a></li>
                 </ul>
               </div>
+              <div class="footer-section-container__footer-links  ">
+                <ul class="link-list-item">
+                  <li><a href=""><img src="img/facebook.svg" alt=""></a></li>
+                  <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
+                  <li><a href=""><img src="img/goggle.svg" alt=""></a></li>
+                  <li><a href=""><img src="img/lin.svg" alt=""></a></li>
+                </ul>
+              </div>
              </div>
-             <div class="display footer-section-container__footer-links center-container">
-              <ul class="link-list-item">
-                <li><a href=""><img src="img/facebook.svg" alt=""></a></li>
-                <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="img/goggle.svg" alt=""></a></li>
-                <li><a href=""><img src="img/lin.svg" alt=""></a></li>
-              </ul>
-            </div>
+  
            </footer>
            
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
