--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
             <li><a href="#">Neflix</a></li>
           </ul>
       
-          <div class="dropdown display">
+          <div class="dropdown">
             <p class="dropdown-toggle"  data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="nav-translator">Eng</span>
+                <img src="img/akar-icons_chevron-down.svg" alt="">
             </p>
-            <ul class="dropdown-menu">
+            <!-- <ul class="dropdown-menu display">
               <li><a class="dropdown-item" href="#">En</a></li>
               <li><a class="dropdown-item" href="#">Ge</a></li>
               <li><a class="dropdown-item" href="#">iz</a></li>
-            </ul>
-            <div class="d-lg-none">
+            </ul> -->
+            <!-- <div class="d-lg-none">
               <img src="img/akar-icons_search.svg" alt="">
             </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span ><img src="img/tablet-menu.svg" alt="" class="tablet-toggler"></span>
-         </button>
+         </button> -->
   
        </div>
   </nav> 
-      
-
       <!-- hamburger menu start -->
           <div class="bg-dark offcanvas offcanvas-end display" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
